fixes: hero spacing
fixed tailwind config

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,9 +86,6 @@ h1 {
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
     @apply bg-background text-foreground;
   }
